ongoing : 배너관리 반응형으로 수정중

--- a/module-admin/src/main/resources/templates/banner/bannerList.html
+++ b/module-admin/src/main/resources/templates/banner/bannerList.html
@@ -99,13 +99,13 @@
                                 <div class="banner-select">
                                     <div class="banner-list column">
                                         <div class="banner">
-                                            <div class="col-12 col-lg-1">
+                                            <div class="col-12 col-lg-1 banner-selecter">
                                                 <img class="img-fluid" src="/files/assets/images/bannerSelecter.png">
                                             </div>
-                                            <div class="col-12 col-lg-3 banner-thumbnail">
+                                            <div class="col-6 col-lg-3 banner-thumbnail">
                                                 <img class="img-fluid" src="/files/assets/images/logo2.png" alt="banner image">
                                             </div>
-                                            <div class="col-12 col-lg-6 m-l-20">
+                                            <div class="col-12 col-lg-6 m-l-20 banner-title">
                                                 <div class="col m-b-30 banner-status on">
                                                     <span>게시중</span>
                                                     <span>첫번째 순서</span>
@@ -113,48 +113,41 @@
                                                 <div class="col m-b-30 stit">
                                                     <span>새식일기를 방문해주셔서 감사합니다 새로운 식구들과 함께해요~</span>
                                                 </div>
-                                                <div class="col-auto">
-                                                    <div class="">
-                                                        <input type="checkbox" class="js-single-small" name="isEnabled" id="isEnabled"/>
-                                                    </div>
+                                                <div class="col">
+                                                    <input type="checkbox" class="js-single-small" name="isEnabled" id="isEnabled"/>
                                                 </div>
                                             </div>
-                                            <div class="col-12 col-lg-1 m-l-30">
-                                                <div class="row">
+                                            <div class="col col-lg-1 m-l-30 banner-btn-area">
+                                                <div class="row banner-btn">
                                                     <button class="btn btn-gray mb-2">삭제</button>
-                                                    <button class="btn btn-primary">수정</button>
+                                                    <button class="btn btn-primary mb-2">수정</button>
                                                 </div>
                                             </div>
                                         </div>
 
                                         <div class="banner">
-                                            <div class="col-12 col-lg-1">
+                                            <div class="col-12 col-lg-1 banner-selecter">
                                                 <img class="img-fluid" src="/files/assets/images/bannerSelecter.png">
                                             </div>
-
-                                            <div class="col-12 col-lg-3 banner-thumbnail">
-                                                <img class="img-fluid" src="/files/assets/images/fafvicon4.png" alt="banner image">
+                                            <div class="col-6 col-lg-3 banner-thumbnail">
+                                                <img class="img-fluid" src="/files/assets/images/fafvicon3.png" alt="banner image">
                                             </div>
-
-                                            <div class="col-12 col-lg-6 m-l-20">
-                                                <div class="col m-b-30 banner-status off">
-                                                    <span>게시안됨</span>
-                                                    <span>두번째 순서</span>
+                                            <div class="col-12 col-lg-6 m-l-20 banner-title">
+                                                <div class="col m-b-30 banner-status on">
+                                                    <span>게시중</span>
+                                                    <span>첫번째 순서</span>
                                                 </div>
                                                 <div class="col m-b-30 stit">
                                                     <span>새식일기를 방문해주셔서 감사합니다 새로운 식구들과 함께해요~</span>
                                                 </div>
-                                                <div class="col-auto">
-                                                    <div class="">
-                                                        <input type="checkbox" class="js-single-small" name="isEnabled" id="isEnabled"/>
-                                                    </div>
+                                                <div class="col">
+                                                    <input type="checkbox" class="js-single-small" name="isEnabled" id="isEnabled"/>
                                                 </div>
                                             </div>
-
-                                            <div class="col-12 col-lg-1 m-l-30">
-                                                <div class="row">
+                                            <div class="col col-lg-1 m-l-30 banner-btn-area">
+                                                <div class="row banner-btn">
                                                     <button class="btn btn-gray mb-2">삭제</button>
-                                                    <button class="btn btn-primary">수정</button>
+                                                    <button class="btn btn-primary mb-2">수정</button>
                                                 </div>
                                             </div>
                                         </div>
