--- a/module-admin/src/main/resources/static/css/admin.common.css
+++ b/module-admin/src/main/resources/static/css/admin.common.css
@@ -306,43 +306,17 @@ div.dataTables_wrapper div.dataTables_info {
 .nodata {border-radius:10px;display:flex;align-items:center;justify-content:center;font-size:16px;width:100%;height:150px;margin-top:15px;background-color:#f7f7f7;}
 .nodata p {margin-bottom:0;}
 @media (max-width: 992px) {
-    .banner-wrap {
-        display: block;
-    }
-
-    .banner-wrap .banner-area {
-        padding: 0;
-    }
-
-    .banner-wrap .banner-select {
-        width: 100%;
-        padding: 30px 0 0;
-        border-left: 0;
-    }
-
-    .banner-wrap .banner-select .banner-list .banner {display: block;}
-
-    .banner-wrap .banner-area {
-        display: block !important;
-    }
-
-    .banner-wrap .banner-area .banner-list {
-        display: block;
-    }
-
-    .banner-wrap .banner-area .banner-list .banner {
-        width: 100%;
-        margin-left: 0 !important;
-        margin-right: 0 !important
-    }
-
-    .banner-wrap .banner-list .banner {
-        margin-top: 20px;
-    }
-
-    .banner-wrap .paging {
-        margin-top: 20px
-    }
+    .banner-wrap .banner-select .banner-list .banner {display: flex; flex-direction: column; align-items: center; border: 1px solid #dee2e6; border-collapse: collapse; border-radius: 20px; padding: 0px 0px 20px 0px;}
+    .banner-wrap .banner-select .banner-list .banner .banner-selecter {position: absolute; z-index: 1; text-align: right;}
+    .banner-wrap .banner-select .banner-list .banner .banner-selecter > img {margin-right: 1.5rem;}
+    .banner-wrap .banner-select .banner-list .banner .banner-title {padding: 10px 20px 10px 10px; position: relative;}
+    .banner-wrap .banner-select .banner-list .banner .banner-thumbnail {position: relative; width: 100%; border: 0px solid #dee2e6; border-bottom: 1px solid #dee2e6; border-radius: 0px; text-align: center;}
+    .banner-wrap .banner-select .banner-list .banner .banner-thumbnail:after {display: block; content: ""; padding-bottom: 75%;}
+    .banner-wrap .banner-select .banner-list .banner .banner-thumbnail > img {position: absolute; top:50%; transform:translateY(-50%); left: 15%; width: 70%; vertical-align: middle;}
+    .banner-wrap .banner-select .banner-list .banner .banner-status {margin-top: 10px;}
+    .banner-wrap .banner-select .banner-list .banner .banner-btn-area {position: absolute;}
+    .banner-wrap .banner-select .banner-list .banner .banner-btn {max-width: 5rem; right: 33%; flex-wrap: unset; --bs-gutter-x: 0; --bs-gutter-y: 0; margin-top: 0; margin-right: 0; margin-left: 0;}
+    .banner-wrap .banner-select .banner-list .banner .banner-btn > button:first-child {margin-right: 10px;}
 }
 
 .form-group.required .col-form-label::after{content:" *";color:red;}
