feat: 더미 세션 데이터 추가

--- a/module-admin/src/main/resources/templates/layout/nav.html
+++ b/module-admin/src/main/resources/templates/layout/nav.html
@@ -429,7 +429,7 @@
           </ul>
         </li>
         <li class="">
-          <a href="/admin/managerBoard">
+          <a href="/admin/managerBoard/view">
             <span class="pcoded-micon"><i class="feather icon-home"></i></span>
             <span class="pcoded-mtext">관리자 게시판</span>
           </a>
