design: 메뉴관리 -> 자원관리 메뉴명 변경

--- a/module-admin/src/main/resources/templates/layout/nav.html
+++ b/module-admin/src/main/resources/templates/layout/nav.html
@@ -441,7 +441,7 @@
         <li class="">
           <a href="/admin/resources/view">
             <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-            <span class="pcoded-mtext">메뉴관리</span>
+            <span class="pcoded-mtext">자원관리</span>
           </a>
         </li>
         <li class="">
