--- a/module-admin/src/main/resources/templates/roles/resourceMapping.html
+++ b/module-admin/src/main/resources/templates/roles/resourceMapping.html
@@ -153,11 +153,17 @@
                         'check_callback': true
                     },
                     "types": {
+                        "DIRECTORY": {
+                            "icon" : "icofont  icofont-folder"
+                        },
                         "MENU": {
-                            "icon": "icofont icofont-folder"
+                            "icon": "icofont icofont-file-alt"
+                        },
+                        "DETAIL_MENU": {
+                            "icon" : "icofont icofont-copy-black"
                         },
                         "FUNCTION": {
-                            "icon": "icofont icofont-file-alt"
+                            "icon": "icofont icofont-tools-alt-2"
                         }
                     },
                     'checkbox': {
